--- a/config/config.json
+++ b/config/config.json
@@ -1,28 +1,28 @@
 {
-  "config": {
-    "env": "Production",
-    "applicationConfig": {
-      "name": "My Awesome App",
-      "version": "1.0.0",
-      "description": "The best app ever!",
-      "author": "My Company",
-      "firebaseConfig": {
-        "androidConfig": {
-          "apiKey": "YOUR_ANDROID_API_KEY",
-          "appId": "YOUR_ANDROID_APP_ID",
-          "messagingSenderId": "YOUR_MESSAGING_SENDER_ID",
-          "projectId": "YOUR_PROJECT_ID",
-          "storageBucket": "YOUR_STORAGE_BUCKET"
+  "config" : {
+    "\"env\"": "\"Dev\"",
+    "\"applicationConfig\"": {
+      "\"name\"": "\"Fare Air\"",
+      "\"version\"": "\"0.0.1\"",
+      "\"description\"": "\"\"",
+      "\"author\"": "\"Baerhous\"",
+      "\"rapidApiKey\"": "\"76d626a29emsh5128ec348c17c4cp1208e5jsn7fbe474eb8c0\"",
+      "\"firebaseConfig\"": {
+        "\"androidConfig\"": {
+          "\"apiKey\"": "\"AIzaSyArBTcuusvpdrD2zRxcU0sRCrsJrMM6d_Y\"",
+          "\"appId\"": "\"1:91076351245:android:c4b1b24e349cac6b474c44\"",
+          "\"messagingSenderId\"": "\"91076351245\"",
+          "\"projectId\"": "\"fair-air-7503c\"",
+          "\"storageBucket\"": "\"fair-air-7503c.firebasestorage.app\""
         },
-        "iosConfig": {
-          "apiKey": "YOUR_IOS_API_KEY",
-          "appId": "YOUR_IOS_APP_ID",
-          "messagingSenderId": "YOUR_MESSAGING_SENDER_ID",
-          "projectId": "YOUR_PROJECT_ID",
-          "storageBucket": "YOUR_STORAGE_BUCKET",
-          "iosBundleId": "com.example.myapp"
+        "\"iosConfig\"": {
+          "\"apiKey\"": "\"AIzaSyDTQ4gMGUx0zkW43rFxsv-3JcFl2upCPEE\"",
+          "\"appId\"": "\"1:91076351245:ios:046023afbcd4c2be474c44\"",
+          "\"messagingSenderId\"": "\"91076351245\"",
+          "\"projectId\"": "\"fair-air-7503c\"",
+          "\"storageBucket\"": "\"fair-air-7503c.firebasestorage.app\"",
+          "\"iosBundleId\"": "\"com.baerhous.fareAir\""
         }
       }
     }
-  }
-}
+  }}
