--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,11 @@ dependencies:
   firebase_database: ^11.3.3
   shared_preferences: ^2.5.2
   firebase_app_check: ^0.3.2+3
+  permission_handler: ^11.4.0
+  location: ^6.0.2
+  http: ^1.3.0
+  dio: ^5.8.0+1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
