--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,17 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
   json_serializable: ^6.9.0
   json_annotation: ^4.9.0
   go_router: ^14.8.0
-  firebase_core: ^3.12.0
-  firebase_analytics: ^11.4.3
-  cloud_firestore: ^5.6.4
-  firebase_auth: ^5.5.0
-  firebase_remote_config: ^5.4.1
-  firebase_storage: ^12.4.3
-  firebase_crashlytics: ^4.3.3
-  firebase_database: ^11.3.3
   shared_preferences: ^2.5.2
   firebase_app_check: ^0.3.2+3
   permission_handler: ^11.4.0
@@ -66,6 +59,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
   build_runner: ^2.4.13
+  riverpod_generator:
+  riverpod_lint:
+  custom_lint: ^0.7.0
 
 
 # For information on the generic Dart part of this file, see the
